--- a/src/app/modules/home/confirm-order/confirm-order.component.html
+++ b/src/app/modules/home/confirm-order/confirm-order.component.html
@@ -12,7 +12,7 @@
                 <div class="action po-col">Action</div>
             </div>
             <div class="pod-data-row" *ngFor="let item of products; let i = index">
-                <div class="number po-col">{{'product' | translate}} {{i + 1}}</div>
+                <div class="number po-col"> {{item.product_number}}</div>
                 <div class="name po-col">{{item.product_name}}</div>
                 <div class="img po-col"><img src="{{item.imageUrl}}" alt=""></div>
                 <div class="qty po-col">
